# satellite-video-generation

./: .gitignore  README.md  package-lock.json  pyproject.toml  t.json
examples/: project.sample.json
geovideo/: __init__.py  audio.py  camera.py  cli.py  compositor.py  config.py  draw.py  geo.py  schemas.py  timeline.py
geovideo/providers/: __init__.py  base.py  mapbox.py  osm.py
html/: app.js  capture.js  index.html  style.css
tests/: test_geo.py  test_html_map.mjs  test_timeline.py
